fix overflow

--- a/sources/styles/all.styl
+++ b/sources/styles/all.styl
@@ -34,7 +34,9 @@ body
 
 .cv-container
   @extend .container
-  
+
+  overflow-y: hidden;
+
   .my-photo-container-outer
     padding: 5px
     border-radius: 5px
